--- a/Administrateur-Systeme-et-Reseaux.html
+++ b/Administrateur-Systeme-et-Reseaux.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Projet - {{l_current |capitalize}}</title>
+    <title>Offre de stage - Administrateur Système & Reseaux </title>
     <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
-    <link  href="{{repere}}css/admin.css" rel="stylesheet" type="text/css" />
+    <link  href="./admin.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div id="main">
