--- a/Administrateur-Systeme-et-Reseaux.html
+++ b/Administrateur-Systeme-et-Reseaux.html
@@ -10,6 +10,7 @@
         
         <div id="middle">
             <div id="left-column">
+            	<b>Entreprise:</b>
             </div>
             <div id="center-column">
                 <div class="top-bar">
