--- a/Administrateur-Systeme-et-Reseaux.html
+++ b/Administrateur-Systeme-et-Reseaux.html
@@ -24,7 +24,7 @@
                 <div class="box" id="info_box"></div>
             </div>
         </div>
-         <div id="footer"><p>Developed by OULMOU Salim & SOULI Bilel 2014.</p></div>
+         <div id="footer"><p>Copyright © 2015.</p></div>
     </div>
 </body>
 </html>
