--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<h1>salim</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Offre de stage - Administrateur Système & Reseaux </title>
+    <meta http-equiv="content-type" content="text/html; charset=iso-8859-1" />
+    <link  href="admin.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+    <div id="main">
+        
+        <div id="middle">
+            <div id="left-column">
+            	<b>Entreprise:</b>
+            </div>
+            <div id="center-column">
+                <div class="top-bar">
+                   <h1></h1>
+                    <div class="breadcrumbs"></div>
+                </div>
+				
+            </div>
+            <div id="right-column">
+                <strong class="h">Info</strong>
+                <div class="box" id="info_box"></div>
+            </div>
+        </div>
+         <div id="footer"><p>Copyright © 2015.</p></div>
+    </div>
+</body>
+</html>
